- fix: Fix concealed door outline.

--- a/Resources/Prototypes/_White/Entities/Cult/other_structures.yml
+++ b/Resources/Prototypes/_White/Entities/Cult/other_structures.yml
@@ -50,6 +50,7 @@
   - type: Concealable
     examinableWhileConcealed: true
     iconSmooth: true
+    interactionOutline: true
     concealedSprite: White/Cult/Structures/Concealed/cult_airlock.rsi
     revealedSprite: White/Cult/Structures/cult_airlock.rsi
   - type: IconSmooth
