--- a/Resources/Prototypes/_White/Entities/Cult/other_structures.yml
+++ b/Resources/Prototypes/_White/Entities/Cult/other_structures.yml
@@ -53,6 +53,11 @@
     interactionOutline: true
     concealedSprite: White/Cult/Structures/Concealed/cult_airlock.rsi
     revealedSprite: White/Cult/Structures/cult_airlock.rsi
+    changeMeta: true
+    concealedName: обычная стена
+    concealedDesc: Удерживает воздух внутри, а ассистентов снаружи.
+    revealedName: рунический шлюз
+    revealedDesc: Странный стеклянный шлюз с руной.
   - type: IconSmooth
     enabled: false
     key: walls
@@ -118,3 +123,8 @@
       examinableWhileConcealed: true
       concealedSprite: White/Cult/Structures/Concealed/cult_girder.rsi
       revealedSprite: White/Cult/Structures/cult_girder.rsi
+      changeMeta: true
+      concealedName: каркас
+      concealedDesc: Большой металлический каркас; Необходимо покрыть листами металла, чтобы он считался стеной.
+      revealedName: руническая балка
+      revealedDesc: Большой конструктивный элемент, изготовленный из металла. На этом есть руна.
