- tweak: Remove the unremoveable.

--- a/Resources/Prototypes/_White/Entities/Cult/Items/blood_barrage.yml
+++ b/Resources/Prototypes/_White/Entities/Cult/Items/blood_barrage.yml
@@ -23,8 +23,7 @@
     proto: BloodBolt
     capacity: 25
   - type: BoltBarrage
-  - type: DisarmMalus
-    malus: 1
+  - type: GiftIgnore
 
 - type: cultistFactoryProduction
   id: FactoryCultBloodBarrage
