- tweak: Gift ignore.

--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Launchers/launchers.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Launchers/launchers.yml
@@ -339,6 +339,7 @@
           unshaded:
             True: { visible: true }
             False: { visible: false }
+    - type: GiftIgnore
 
 - type: entity
   name: force gun
@@ -381,6 +382,7 @@
           unshaded:
             True: { visible: true }
             False: { visible: false }
+    - type: GiftIgnore
 
 - type: entity
   name: meteor launcher
@@ -394,6 +396,7 @@
       tags:
         - CartridgeRocket
     proto: MeteorLarge
+  - type: GiftIgnore
 
 - type: entity
   name: immovable rod launcher
@@ -407,3 +410,4 @@
       tags:
         - CartridgeRocket
     proto: ImmovableRodSlow
+  - type: GiftIgnore
