fix: fix lathe whitelist

--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -25,12 +25,12 @@
       - RawMaterial
       - Ingot
       entities:
-      - SheetSteel
-      - SheetGlass
-      - IngotGold
-      - SheetPlasma
-      - SheetUranium
-      - SheetPlastic
+      - Steel
+      - Glass
+      - Gold
+      - Plasma
+      - Uranium
+      - Plastic
   - type: Destructible
     thresholds:
     - trigger:
