--- a/Resources/Prototypes/Entities/Structures/Furniture/dresser.yml
+++ b/Resources/Prototypes/Entities/Structures/Furniture/dresser.yml
@@ -15,7 +15,6 @@
     - trigger:
         !type:DamageTrigger
         damage: 50
-
       behaviors:
       - !type:SpawnEntitiesBehavior
         spawn:
@@ -26,8 +25,8 @@
         acts: [ "Destruction" ]
   - type: Storage
     grid:
-    - 0,0,6,3
-    maxItemSize: Normal
+    - 0,0,8,5
+    maxItemSize: Huge
   - type: ContainerContainer
     containers:
       storagebase: !type:Container
