--- a/Resources/Prototypes/Catalog/Fills/Lockers/heads.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/heads.yml
@@ -133,24 +133,18 @@
   components:
   - type: StorageFill
     contents:
-      - id: ClothingOuterHardsuitEngineeringWhite
-      - id: ClothingMaskBreath
-      - id: OxygenTankFilled
-      - id: NitrogenTankFilled
-      - id: ClothingEyesGlassesMeson
       - id: ClothingBeltChiefEngineerFilled
-      - id: ClothingShoesBootsMagAdv
-      - id: ClothingHandsGlovesColorYellow
-      - id: CigarCase
-        prob: 0.15
       - id: DoorRemoteEngineering
       - id: RubberStampCE
-      - id: JetpackVoidFilled
-      - id: ClothingHeadsetAltEngineering
       - id: BoxEncryptionKeyEngineering
       - id: AccessConfigurator
       - id: RCD
       - id: RCDAmmo
+        amount: 2
+      - id: HolofanProjector
+      - id: ClothingOuterHardsuitEngineeringWhite
+      - id: ClothingMaskBreath
+      - id: OxygenTankFilled
 
 - type: entity
   id: LockerChiefEngineerFilled
@@ -159,19 +153,15 @@
   components:
   - type: StorageFill
     contents:
-      - id: ClothingEyesGlassesMeson
-      - id: ClothingBeltChiefEngineerFilled
-      - id: ClothingHandsGlovesColorYellow
-      - id: CigarCase
-        prob: 0.15
-      - id: DoorRemoteEngineering
-      - id: RubberStampCE
-      - id: ClothingHeadsetAltEngineering
-      - id: BoxEncryptionKeyEngineering
-      - id: AccessConfigurator
-      - id: RCD
-      - id: RCDAmmo
-      - id: ClothingHeadHatHardhatWhite
+    - id: ClothingBeltChiefEngineerFilled
+    - id: DoorRemoteEngineering
+    - id: RubberStampCE
+    - id: BoxEncryptionKeyEngineering
+    - id: AccessConfigurator
+    - id: RCD
+    - id: RCDAmmo
+      amount: 2
+    - id: HolofanProjector
 
 - type: entity
   id: LockerChiefMedicalOfficerFilledHardsuit
