tweak: qm locker rework

--- a/Resources/Prototypes/Catalog/Fills/Lockers/dressers.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/dressers.yml
@@ -103,6 +103,11 @@
       - id: ClothingUniformJumpskirtQMTurtleneck
       - id: ClothingHandsGlovesColorBrown
       - id: ClothingNeckMantleQM
+      - id: ClothingHeadsetAltCargo
+      - id: ClothingOuterWinterQM
+      - id: ClothingUniformJumpsuitQM
+      - id: ClothingUniformJumpskirtQM
+      - id: ClothingHeadHatQMsoft
 
 - type: entity
   id: DresserResearchDirectorFilled
