--- a/Resources/Prototypes/Catalog/Fills/Lockers/dressers.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/dressers.yml
@@ -14,6 +14,11 @@
       - id: ClothingHandsGlovesCaptain
       - id: ClothingNeckMantleCap
       - id: ClothingEyesGlassesSunglasses
+      - id: ClothingOuterArmorCaptainCarapace
+      - id: ClothingHeadsetAltCommand
+      - id: ClothingMaskGasCaptain
+      - id: ClothingUniformJumpskirtCaptain
+      - id: ClothingOuterWinterCap
 
 - type: entity
   id: DresserChiefEngineerFilled
