--- a/Resources/Prototypes/Catalog/Fills/Lockers/heads.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/heads.yml
@@ -22,19 +22,13 @@
   components:
   - type: StorageFill
     contents:
-      - id: ClothingOuterArmorCaptainCarapace
+      - id: WeaponEgun
       - id: NukeDisk
       - id: PinpointerNuclear
       - id: CaptainIDCard
-      - id: ClothingOuterHardsuitCap
-      - id: ClothingMaskGasCaptain
-      - id: WeaponEgun
       - id: CommsComputerCircuitboard
-      - id: ClothingHeadsetAltCommand
       - id: PlushieNuke
         prob: 0.1
-      - id: CigarGoldCase
-        prob: 0.25
       - id: ClothingBeltSheathFilled
       - id: DoorRemoteCommand
       - id: RubberStampCaptain
@@ -43,6 +37,9 @@
       - id: MedalCase
       - id: CommandBudgetCard
       - id: CommandBudgetPinPaper
+      - id: MedalCase
+      - id: ClothingOuterHardsuitCap
+      - id: OxygenTankFilled
 
 - type: entity
   id: LockerCaptainFilled
@@ -51,25 +48,22 @@
   components:
   - type: StorageFill
     contents:
-      - id: ClothingOuterArmorCaptainCarapace
-      - id: NukeDisk
-      - id: PinpointerNuclear
-      - id: CaptainIDCard
-      - id: WeaponDisabler
-      - id: CommsComputerCircuitboard
-      - id: ClothingHeadsetAltCommand
-      - id: PlushieNuke
-        prob: 0.1
-      - id: CigarGoldCase
-        prob: 0.25
-      - id: ClothingBeltSheathFilled
-      - id: DoorRemoteCommand
-      - id: RubberStampCaptain
-      - id: WeaponAntiqueLaser
-      - id: JetpackCaptainFilled
-      - id: MedalCase
-      - id: CommandBudgetCard
-      - id: CommandBudgetPinPaper
+    - id: WeaponEgun
+    - id: NukeDisk
+    - id: PinpointerNuclear
+    - id: CaptainIDCard
+    - id: CommsComputerCircuitboard
+    - id: PlushieNuke
+      prob: 0.1
+    - id: ClothingBeltSheathFilled
+    - id: DoorRemoteCommand
+    - id: RubberStampCaptain
+    - id: WeaponAntiqueLaser
+    - id: JetpackCaptainFilled
+    - id: MedalCase
+    - id: CommandBudgetCard
+    - id: CommandBudgetPinPaper
+    - id: MedalCase
 
 - type: entity
   id: LockerCaptainFilledNoLaser
@@ -78,23 +72,22 @@
   components:
   - type: StorageFill
     contents:
-      - id: ClothingOuterArmorCaptainCarapace
-      - id: NukeDisk
-      - id: PinpointerNuclear
-      - id: CaptainIDCard
-      - id: WeaponDisabler
-      - id: CommsComputerCircuitboard
-      - id: ClothingHeadsetAltCommand
-      - id: SpaceCash1000
-      - id: PlushieNuke
-        prob: 0.1
-      - id: CigarGoldCase
-        prob: 0.25
-      - id: ClothingBeltSheathFilled
-      - id: DoorRemoteCommand
-      - id: RubberStampCaptain
-      - id: JetpackCaptainFilled
-      - id: MedalCase
+    - id: WeaponEgun
+    - id: NukeDisk
+    - id: PinpointerNuclear
+    - id: CaptainIDCard
+    - id: WeaponDisabler
+    - id: CommsComputerCircuitboard
+    - id: PlushieNuke
+      prob: 0.1
+    - id: ClothingBeltSheathFilled
+    - id: DoorRemoteCommand
+    - id: RubberStampCaptain
+    - id: JetpackCaptainFilled
+    - id: MedalCase
+    - id: CommandBudgetCard
+    - id: CommandBudgetPinPaper
+    - id: MedalCase
 
 - type: entity
   id: LockerHeadOfPersonnelFilled
