--- a/Resources/Prototypes/Entities/Objects/Misc/implanters.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/implanters.yml
@@ -40,6 +40,7 @@
           map: [ "implantFull" ]
           visible: false
     - type: Item
+      storedRotation: -90
       sprite: Objects/Specific/Medical/implanter.rsi
       heldPrefix: 0
       size: Small
