add: handheld crew monitor to paramedic locker

--- a/Resources/Prototypes/Catalog/Fills/Lockers/medical.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/medical.yml
@@ -154,4 +154,5 @@
       - id: HandheldGPSBasic
       - id: MedkitFilled
       - id: Eftpos
-      - id: ClothingBeltMedicalEMT
+      - id: ClothingBeltMedicalEMTFilled
+      - id: HandheldCrewMonitor
