add: magboots and insulated gloves to atmos locker

--- a/Resources/Prototypes/Catalog/Fills/Lockers/engineer.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/engineer.yml
@@ -92,6 +92,8 @@
       - id: DoorRemoteFirefight
       - id: ClothingBeltUtilityEngineering
       - id: ClothingEyesGlassesMeson
+      - id: ClothingShoesBootsMag
+      - id: ClothingHandsGlovesColorYellow
 
 - type: entity
   id: LockerAtmosphericsFilled
@@ -109,6 +111,8 @@
       - id: DoorRemoteFirefight
       - id: ClothingBeltUtilityEngineering
       - id: ClothingEyesGlassesMeson
+      - id: ClothingShoesBootsMag
+      - id: ClothingHandsGlovesColorYellow
 
 - type: entity
   id: LockerEngineerFilledHardsuit
