add: pill and bottle boxes to medicine locker

--- a/Resources/Prototypes/Catalog/Fills/Lockers/medical.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/medical.yml
@@ -16,6 +16,8 @@
         amount: 2
       - id: Gauze
       - id: MedkitFilled
+      - id: BoxPillCanister
+      - id: BoxBottle
 
 - type: entity
   id: LockerWallMedicalFilled
