add: funny mobs

--- a/Resources/Prototypes/Entities/Mobs/NPCs/animals.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/animals.yml
@@ -2189,6 +2189,21 @@
     - type: GhostTakeoverAvailable
 
 - type: entity
+  name: angry monkey
+  parent: MobMonkey
+  id: MobMonkeyAngry
+  suffix: Angry
+  components:
+  - type: NpcFactionMember
+    factions:
+    - SimpleHostile
+  - type: InputMover
+  - type: MobMover
+  - type: HTN
+    rootTask:
+      task: SimpleHostileCompound
+
+- type: entity
   name: clown spider
   parent: MobGiantSpiderAngry
   id: MobClownSpider
@@ -3205,4 +3220,4 @@
   components:
   - type: ReplacementAccent
     accent: nymph
-    
+
