--- a/Resources/Prototypes/_White/Entities/Cult/Effects/shield.yml
+++ b/Resources/Prototypes/_White/Entities/Cult/Effects/shield.yml
@@ -25,7 +25,7 @@
           layer:
             - WallLayer
     - type: Damageable
-      damageContainer: Inorganic
+      damageContainer: StructuralInorganic
       damageModifierSet: Metallic
     - type: Destructible
       thresholds:
