fix: fix custom ghost

--- a/Resources/Prototypes/White/Ghosts/custom_ghosts.yml
+++ b/Resources/Prototypes/White/Ghosts/custom_ghosts.yml
@@ -409,5 +409,5 @@
   ckey: kreses
   sprite: White/Ghosts/kreses-ghost.rsi
   alpha: 0.9
-  ghostName: Gawr
-  ghostDescription: Из океана...
+  ghostName: Дракон сингулярности
+  ghostDescription: Владыка сингулярности
