tweak: WonderBox, Polaris, Scoupidia, Void and Triumph are back in map pool

--- a/Resources/Prototypes/Maps/Pools/default.yml
+++ b/Resources/Prototypes/Maps/Pools/default.yml
@@ -14,4 +14,9 @@
   - Saltern
   - Packed
   - Reach
+  - WonderBox
+  - Polaris
+  - Scoupidia
+  - Void
+  - Triumph
   #- Train <- return after station anchoring PR is finished and merged
