tweak: change bodycameras box to single bodycamera at security locker

--- a/Resources/Prototypes/Catalog/Fills/Lockers/security.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/security.yml
@@ -64,7 +64,7 @@
         prob: 0.6
       - id: WeaponTempGun
       - id: WeaponPistolMk58Nonlethal
-      - id: BoxBodyCamera
+      - id: SurveillanceBodyCamera
       - id: MagazinePistol
 
 - type: entity
