fix: fix filled assault belt contents

--- a/Resources/Prototypes/Entities/Clothing/Belt/belts.yml
+++ b/Resources/Prototypes/Entities/Clothing/Belt/belts.yml
@@ -220,7 +220,7 @@
     contents:
     - id: GrenadeFlashBang
     - id: TearGasGrenade
-    - id: ExperimentalStunbaton
+    - id: Stunbaton
     - id: Handcuffs
     - id: Handcuffs
 
