--- a/Resources/Prototypes/Recipes/Construction/Graphs/structures/doors.yml
+++ b/Resources/Prototypes/Recipes/Construction/Graphs/structures/doors.yml
@@ -63,6 +63,8 @@
             - !type:SpawnPrototype
               prototype: SheetSteel1
               amount: 20
+          conditions:
+            - !type:DoorUnlocked
           steps:
             - tool: Anchoring
               doAfter: 15
@@ -74,6 +76,8 @@
             - !type:SpawnPrototype
               prototype: MaterialWoodPlank1
               amount: 20
+          conditions:
+            - !type:DoorUnlocked
           steps:
             - tool: Anchoring
               doAfter: 15
@@ -85,6 +89,8 @@
             - !type:SpawnPrototype
               prototype: SheetPlasma
               amount: 20
+          conditions:
+            - !type:DoorUnlocked
           steps:
             - tool: Anchoring
               doAfter: 15
@@ -96,6 +102,8 @@
             - !type:SpawnPrototype
               prototype: IngotGold1
               amount: 20
+          conditions:
+            - !type:DoorUnlocked
           steps:
             - tool: Anchoring
               doAfter: 15
@@ -107,6 +115,8 @@
             - !type:SpawnPrototype
               prototype: IngotSilver1
               amount: 20
+          conditions:
+            - !type:DoorUnlocked
           steps:
             - tool: Anchoring
               doAfter: 15
@@ -118,6 +128,8 @@
             - !type:SpawnPrototype
               prototype: SheetPaper1
               amount: 20
+          conditions:
+            - !type:DoorUnlocked
           steps:
             - tool: Anchoring
               doAfter: 15
@@ -129,6 +141,8 @@
             - !type:SpawnPrototype
               prototype: MaterialBananium1
               amount: 5
+          conditions:
+            - !type:DoorUnlocked
           steps:
             - tool: Anchoring
               doAfter: 15
