fix: add hos trench to hos dresser

--- a/Resources/Prototypes/Catalog/Fills/Lockers/dressers.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/dressers.yml
@@ -96,6 +96,7 @@
       - id: ClothingEyesGlassesSecurity
       - id: ClothingHeadsetAltSecurity
       - id: ClothingMaskGasSwat
+      - id: ClothingOuterCoatHoSTrench
 
 - type: entity
   id: DresserQuarterMasterFilled
