--- a/Resources/Prototypes/Entities/Mobs/Player/admin_ghost.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/admin_ghost.yml
@@ -102,8 +102,8 @@
 
 - type: entity
   id: ActionAGhostShowSolar
-  name: Solar Control Interface
-  description: View a solar control interface.
+  name: action-name-show-solar-console
+  description: action-description-show-solar-console
   noSpawn: true
   components:
   - type: InstantAction
@@ -115,8 +115,8 @@
 
 - type: entity
   id: ActionAGhostShowCommunications
-  name: Communications Interface
-  description: View a communications interface.
+  name: action-name-show-communications-console
+  description: action-description-show-communications-console
   noSpawn: true
   components:
   - type: InstantAction
@@ -128,8 +128,8 @@
 
 - type: entity
   id: ActionAGhostShowRadar
-  name: Mass Scanner Interface
-  description: View a mass scanner interface.
+  name: action-name-show-radar-console
+  description: action-description-show-radar-console
   noSpawn: true
   components:
   - type: InstantAction
@@ -141,8 +141,8 @@
 
 - type: entity
   id: ActionAGhostShowCargo
-  name: Cargo Ordering Interface
-  description: View a cargo ordering interface.
+  name: action-name-show-cargo-console
+  description: action-description-show-cargo-console
   noSpawn: true
   components:
   - type: InstantAction
@@ -154,8 +154,8 @@
 
 - type: entity
   id: ActionAGhostShowCrewMonitoring
-  name: Crew Monitoring Interface
-  description: View a crew monitoring interface.
+  name: action-name-show-crew-monitoring-console
+  description: action-description-crew-monitoring-console
   noSpawn: true
   components:
   - type: InstantAction
@@ -167,8 +167,8 @@
 
 - type: entity
   id: ActionAGhostShowStationRecords
-  name: Station Records Interface
-  description: View a station records Interface
+  name: action-name-show-station-records-console
+  description: action-description-show-station-records-console
   noSpawn: true
   components:
   - type: InstantAction
