- tweak: Change sounds.

--- a/Resources/Prototypes/_White/Entities/Objects/Weapons/chaplain_weapons.yml
+++ b/Resources/Prototypes/_White/Entities/Objects/Weapons/chaplain_weapons.yml
@@ -413,6 +413,10 @@
       types:
         Blunt: 24
         Structural: 80
+    soundHit:
+      collection: HammerHit
+    soundSwing:
+      collection: HammerMiss
   - type: Item
     size: Huge
     sprite: White/Objects/Weapons/Chaplain/hammer.rsi
