--- a/Resources/Prototypes/_White/Entities/Cult/constructs.yml
+++ b/Resources/Prototypes/_White/Entities/Cult/constructs.yml
@@ -102,6 +102,10 @@
         types:
           Structural: 90
           Blunt: 25
+      soundHit:
+        collection: HammerHit
+      soundSwing:
+        collection: HammerMiss
 
 - type: entity
   id: ArtificerConstruct
@@ -170,9 +174,11 @@
       attackRate: 1
       damage:
         types:
-          Blunt: 10
+          Piercing: 10
           Slash: 10
           Structural: 40
+      soundHit:
+        path: /Audio/Weapons/bladeslice.ogg
 
 - type: entity
   id: ReaperConstruct
@@ -200,9 +206,11 @@
       attackRate: 1
       damage:
         types:
-          Blunt: 20
+          Piercing: 20
           Slash: 20
           Structural: 80
+      soundHit:
+        path: /Audio/Weapons/bladeslice.ogg
 
 - type: entity
   id: ConstructShell
