- add: Pylon now produces oxygen.

--- a/Resources/Prototypes/_White/Entities/Cult/Altars/cult_altars.yml
+++ b/Resources/Prototypes/_White/Entities/Cult/Altars/cult_altars.yml
@@ -69,6 +69,11 @@
     graph: CultPylon
     node: pylon
   - type: Concealable
+  - type: AtmosDevice
+  - type: GasMiner
+    maxExternalPressure: 100
+    spawnAmount: 10
+    spawnGas: Oxygen
 
 - type: entity
   id: AltarTome
