tweak: Bagel, Meta and Train in map pool

--- a/Resources/Prototypes/Maps/Pools/White.yml
+++ b/Resources/Prototypes/Maps/Pools/White.yml
@@ -4,6 +4,9 @@
   - WonderBox
   - Polaris
   - Scoupidia
-  - Void
   - Triumph
   - WhiteBox
+  - Bagel    # Temporary
+  - Meta     # Temporary
+  - Train    # Temporary
+#  - Void
