--- a/Resources/Prototypes/_White/Fluff/sponsor.yml
+++ b/Resources/Prototypes/_White/Fluff/sponsor.yml
@@ -407,6 +407,11 @@
   entity: ClothingOuterJacketReider207
   sponsorOnly: true
 
+- type: loadout
+  id: Reider207Skates
+  entity: ClothingShoesSkatesReider207
+  sponsorOnly: true
+
 # egoruch17
 - type: loadout
   id: Egoruch17Mask
